# src/modules/team/team.entity.ts
@@ -1,0 +1,16 @@
+import { Entity, PrimaryGeneratedColumn, Column } from 'typeorm';
+
+@Entity()
+export class Team {
+  @PrimaryGeneratedColumn()
+  id: number;
+
+  @Column()
+  name: string;
+
+  @Column()
+  image: string; // Đường dẫn hoặc URL của ảnh
+
+  @Column()
+  description: string;
+}
